css spacing fixes

--- a/assets/skeleton.css
+++ b/assets/skeleton.css
@@ -133,7 +133,7 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
   margin-top: -60px;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   font-weight: 600;
 }
 h1 { font-family: "Yatra One", "Nunito" , "Helvetica", cursive; color: rgb(75, 10, 85); line-height: 1.2;  letter-spacing: -0.1rem;}
@@ -159,7 +159,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 p {
   font-size: 24px;
-  margin-top: 0; }
+  margin-top: 0;
+}
 
 
 /* Links
@@ -365,7 +366,7 @@ th {
   font-family: "Yatra One", "Nunito" , "Helvetica", sans-serif;
   color: rgb(0, 0, 0);
   text-align: left;
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   padding-left: 1rem;
   padding-bottom: 1rem;
   font-size: 3rem;
